<?xml version="1.0"?>
<package format="2">
  <name>points_preprocessor</name>
  <version>1.14.14</version>
  <description>The points_preprocessor package</description>
  <maintainer email="abrahammonrroy@yahoo.com">amc-nu</maintainer>
  <author email="n.patiphon@gmail.com">n-patiphon</author>
  <author email="akihito.ohsato@tier4.jp">aohsato</author>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_config_msgs</depend>
  <depend>gtest</depend>
  <depend>libopencv-dev</depend>
  <depend>message_filters</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>rostest</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>tf</depend>
  <depend>velodyne_pcl</depend>
  <depend>yaml-cpp</depend>
</package>
